<resources>
    <string name="app_name">BMICalculator</string>
    <string name="height">Height</string>
    <string name="cm">CM</string>
    <string name="weight">Weight</string>
    <string name="kg">KG</string>
    <string name="calculate">Calculate BMI</string>
    <string name="image">Image</string>
    <string name="bmi_calculator2">BMI_CALCULATOR2</string>
    <string name="todo">TODO</string>
    <string name="bmi_calculator">BMI Calculator</string>
</resources>